# 2023_1_HAC

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  http_protocol.txt  protocol.txt  schema.sql
.github/workflows/: linters_and_tests.yml  tests.yml
ci/dockers/: Dockerfile.server
ci/scripts/: build_server.sh  push.sh
dump_db/: dump.sh  mmm_dump
gui/: .gitignore  CMakeLists.txt  run_tests.sh  start.sh
gui/project/: CMakeLists.txt  auth_parm.txt  loadingwindow.cpp  loadingwindow.h  loadingwindow.ui
gui/project/include/: authorizationwindow.h  authorizationwindow_interface.h  authorizationwindow_network.h  authorizationwindow_network_interface.h  guicontroller.h  guicontroller_interface.h  ionetwork.h  ionetwork_interface.h  loadingwindow.h  mainwindow.h  mainwindow_interface.h  mainwindow_network.h  mainwindow_network_interface.h  registrationwindow.h  registrationwindow_interface.h  registrationwindow_network.h  registrationwindow_network_interface.h  usecase_authorizationwindow.h  usecase_authorizationwindow_interface.h  usecase_mainwindow.h  usecase_mainwindow_interface.h  usecase_registrationwindow.h  usecase_registrationwindow_interface.h  usecase_usersettingswindow.h  usecase_usersettingswindow_interface.h  usersettingswindow.h  usersettingswindow_interface.h  usersettingswindow_network.h  usersettingswindow_network_interface.h
gui/project/include/settings/: emailsettingswindow.h  emailsettingswindow_interface.h  passwordsettingswindow.h  passwordsettingswindow_interface.h  usecase_emailsettingswindow.h  usecase_emailsettingswindow_interface.h  usecase_passwordsettingswindow.h  usecase_passwordsettingswindow_interface.h  usecase_usersettingswindow.h  usecase_usersettingswindow_interface.h  usersettingswindow.h  usersettingswindow_interface.h  usersettingswindow_network.h  usersettingswindow_network_interface.h
gui/project/src/: authorizationwindow.cpp  authorizationwindow.ui  authorizationwindow_network.cpp  guicontroller.cpp  guicontroller.ui  ionetwork.cpp  loadingwindow.cpp  loadingwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow_network.cpp  registrationwindow.cpp  registrationwindow.ui  registrationwindow_network.cpp  usecase_authorization_window.cpp  usecase_authorizationwindow.cpp  usecase_mainwindow.cpp  usecase_registrationwindow.cpp  usecase_usersettingswindow.cpp  usersettingswindow.cpp  usersettingswindow.ui  usersettingswindow_network.cpp
gui/project/src/settings/: emailsettingswindow.cpp  emailsettingswindow.ui  passwordsettingswindow.cpp  passwordsettingswindow.ui  usecase_emailsettingswindow.cpp  usecase_passwordsettingswindow.cpp  usecase_usersettingswindow.cpp  usersettingswindow.cpp  usersettingswindow.ui  usersettingswindow_network.cpp
gui/project/tests/: CMakeLists.txt
gui/project/tests/include/: utils.h
gui/project/tests/src/: gui_authorization_tests.cpp  gui_base_tests.cpp  gui_email_settings_tests.cpp  gui_mainwindow_tests.cpp  gui_password_settings_tests.cpp  gui_registration_tests.cpp  gui_user_settings_tests.cpp  main.cpp
model/: .gitignore  Dockerfile  data.csv  freeze_conda.txt  handlers.py  labales.csv  log.py  main.py  model.py  server.py  test_server.py
server/: .gitignore  CMakeLists.txt  run_tests.sh  start.sh
server/project/: CMakeLists.txt
server/project/dblib/: CMakeLists.txt  protocol.txt
server/project/dblib/include/: data.hpp  databaseerrors.hpp  db_.h  dbcontroller.hpp  dbexception.hpp  exception.hpp  idatabase.hpp  idatabasecontroller.hpp  imemorydatabase.hpp  irepositories.hpp  irepositorycache.hpp  postgresserver.hpp  redisserver.hpp  repositories.hpp  repositorieserrors.hpp  repositorycache.hpp  tokenrepository.hpp
server/project/dblib/src/: clientrepository.cpp  data.cpp  db.cpp  dbcontroller.cpp  postgresserver.cpp  redisserver.cpp  repositories.cpp  repositorycache.cpp  subscriptionrepository.cpp  timeseriesrepository.cpp  tokenrepository.cpp
server/project/dblib/tests/: CMakeLists.txt
server/project/dblib/tests/src/: dbcontroller_test.cpp  postgres_test.cpp  repositories_tests.cpp  repositorycache_tests.cpp
server/project/handlerlib/: CMakeLists.txt
server/project/handlerlib/include/: config_handler.h  controllers.h  handler_exception.h  handlers.h  icontrollers.h  ihandler.h
server/project/handlerlib/src/: controllers.cpp  handlers.cpp
server/project/handlerlib/tests/: CMakeLists.txt
server/project/handlerlib/tests/include/: controllers_test.h  handlers_test.h  utils_gtest_handlers.h
server/project/handlerlib/tests/src/: authorization_controller_test.cpp  controller.cpp  handler_base_test.cpp  handlers_betest.cpp  handlers_btest.cpp  handlers_logic_test.cpp  hauthorization_test.cpp  hpredicts_test.cpp  hregistration_test.cpp  hshowplot_test.cpp  main.cpp  predict_controller_berror_test.cpp  predict_controller_btest.cpp  predict_controller_test.cpp  registration_controller_test.cpp  showplot_controller_test.cpp
server/project/include/: exception.h  utils.h
server/project/serverlib/: CMakeLists.txt
server/project/serverlib/include/: api_model.h  api_stock.h  cold_start_helper.h  http_protocol.h  listener.h  logger.h  routers.h  server.h  server_exception.h  session.h  update_data_job.h
server/project/serverlib/src/: api_model.cpp  api_stock.cpp  cold_start_helper.cpp  http_protocol.cpp  listener.cpp  logger.cpp  routers.cpp  server.cpp  session.cpp  update_data_job.cpp
server/project/serverlib/tests/: CMakeLists.txt
server/project/serverlib/tests/include/: utils_gtest_net.h
server/project/serverlib/tests/src/: api_model_btest.cpp  api_stock_btest.cpp  http_protocol_btest.cpp  listener_btest.cpp  main.cpp  routers_btest.cpp  server_btest.cpp  session_btest.cpp
server/project/src/: main.cpp
server/project/utils/: api_model_config.txt  api_stock_config.txt  config_server.txt  default_stocks.txt
