ADD_SUBDIRECTORY(dblib)
ADD_SUBDIRECTORY(handlerlib)
ADD_SUBDIRECTORY(serverlib)

add_compile_options(-lssl -lcrypto)
SET(BOOST_INCLUDE_DIRS "/usr/local/boost_1_81_0")

find_package(OpenSSL REQUIRED)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS}  ${SERVER_INCLUDE_DIRS} ${DB_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS} ${HANDLER_INCLUDE_DIRS}  ${OPENSSL_INCLUDE_DIR} include)

ADD_EXECUTABLE(${PROJECT_NAME} src/main.cpp)
link_directories(${OPENSSL_LIBRARY_DIR})
link_libraries(${OPENSSL_LIBRARIES}) 

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ssl crypto jsoncpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${HANDLER_LIBRARIES} ${SERVER_LIBRARIES} ${DB_LIBRARIES})