project(dblib)
FILE(GLOB SOURCES src/*)
FILE(GLOB INCLUDE_DIRS include)

FIND_PACKAGE(jsoncpp)
FIND_LIBRARY(PQXX_LIB pqxx)
FIND_LIBRARY(PQ_LIB pq)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${JSON_INC_PATH})
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
GET_TARGET_PROPERTY(JSON_INC_PATH jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)


TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${PQXX_LIB} ${PQ_LIB} jsoncpp_lib)

SET(DB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(DB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

# ADD_SUBDIRECTORY(tests)