project(dblib)

FILE(GLOB SOURCES src/*)
FILE(GLOB INCLUDE_DIRS include)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_LIBRARY(PQXX_LIB pqxx)
FIND_LIBRARY(PQ_LIB pq)
pkg_check_modules(JSONCPP jsoncpp)

SET(SERVER_INCLUDE_GENERAL ${CMAKE_SOURCE_DIR}/project/include)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${SERVER_INCLUDE_GENERAL}) 
LINK_LIBRARIES(${JSONCPP_LIBRARIES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${PQXX_LIB} ${PQ_LIB} ${JSONCPP_LIBRARIES} )

SET(DB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(DB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

ADD_SUBDIRECTORY(tests)
