project(handlerlib)
FILE(GLOB SOURCES src/*)
FILE(GLOB INCLUDE_DIRS include)



SET(BOOST_INCLUDE_DIRS "/usr/local/boost_1_81_0")
set(BOOST_ROOT "/usr/local/boost_1_81_0")


INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS})
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ssl crypto jsoncpp)


SET(HANDLER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(HANDLER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

ADD_SUBDIRECTORY(tests)