project(handlerlib)
FILE(GLOB SOURCES src/*)
FILE(GLOB INCLUDE_DIRS include)
FIND_PACKAGE(jsoncpp)

SET(BOOST_INCLUDE_DIRS "/usr/local/boost_1_81_0")
set(BOOST_ROOT "/usr/local/boost_1_81_0")
SET(DB_INCLUDE_DIRS "../dblib/include")
SET(SERVER_INCLUDE_DIRS "../serverlib/include")
SET(SERVER_INCLUDE_GENERAL "../include")

INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS} ${DB_INCLUDE_DIRS} ${SERVER_INCLUDE_DIRS} ${SERVER_INCLUDE_GENERAL} ${JSON_INC_PATH})
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
GET_TARGET_PROPERTY(JSON_INC_PATH jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC jsoncpp_lib)


SET(HANDLER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(HANDLER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

ADD_SUBDIRECTORY(tests)
