project(handlerlib)
FILE(GLOB SOURCES src/*)
FILE(GLOB INCLUDE_DIRS include)

find_package(OpenSSL REQUIRED)

pkg_search_module(JSONCPP jsoncpp)
add_compile_options(-lssl -lcrypto -pedantic -pedantic-errors)

SET(BOOST_INCLUDE_DIRS "/usr/local/boost_1_81_0")
set(BOOST_ROOT "/usr/local/boost_1_81_0")
SET(DB_INCLUDE_DIRS "../dblib/include")
SET(SERVER_INCLUDE_DIRS "../serverlib/include")
SET(SERVER_INCLUDE_GENERAL "../include")

INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR} ${INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS} ${DB_INCLUDE_DIRS} ${SERVER_INCLUDE_DIRS} ${SERVER_INCLUDE_GENERAL})
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${JSONCPP_LIBRARIES} ssl crypto)
link_directories(${OPENSSL_LIBRARY_DIR})
link_libraries(${OPENSSL_LIBRARIES})


SET(HANDLER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(HANDLER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

#ADD_SUBDIRECTORY(tests)
