project(serverlib)
FILE(GLOB SOURCES src/*)
FILE(GLOB INCLUDE_DIRS include)

SET(BOOST_INCLUDE_DIRS "/usr/local/boost_1_81_0")

INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS})
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})

SET(SERVER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(SERVER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

#ADD_SUBDIRECTORY(tests)