project(serverlib)
FILE(GLOB SOURCES src/*)
FILE(GLOB INCLUDE_DIRS include)

SET(BOOST_INCLUDE_DIRS "/usr/local/boost_1_81_0")

add_compile_options(-lssl -lcrypto)
find_package(OpenSSL REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})

SET(HANDLER_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/project/handlerlib/include)
SET(DB_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/project/dblib/include)
#SET(SERVERLIB_INCLUDE_DIRS "include")
SET(SERVER_INCLUDE_GENERAL ${CMAKE_SOURCE_DIR}/project/include)


INCLUDE_DIRECTORIES(${INCLUDE_DIRS} ${DB_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS} ${HANDLER_INCLUDE_DIRS} ${SERVER_INCLUDE_GENERAL}  ${OPENSSL_INCLUDE_DIR})
link_directories(${OPENSSL_LIBRARY_DIR})
link_libraries(${OPENSSL_LIBRARIES})
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ssl crypto jsoncpp handlerlib dblib)

#set(CMAKE_CXX_FLAGS "-lboost_program_options")

SET(SERVER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
SET(SERVER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

ADD_SUBDIRECTORY(tests)

